--- a/ar-food/package.json
+++ b/ar-food/package.json
@@ -6,8 +6,9 @@
   "dependencies": {
     "cra-template": "1.2.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0", 
-    "react-scripts": "5.0.1"
+    "react-dom": "^19.0.0",
+    "react-scripts": "5.0.1",
+    "three": "^0.171.0"
   },
   "scripts": {
     "predeploy": "npm run build",
